--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
         .screen {
             display: none;
             min-height: 100vh;
+            min-height: 100dvh;
             padding: 2rem 1.5rem;
             position: relative;
             z-index: 1;
@@ -913,10 +914,17 @@
         @media (max-width: 480px) {
             .screen {
                 padding: 1.5rem 1rem;
+                min-height: 100dvh;
             }
 
             .cover-title {
-                font-size: 2rem;
+                font-size: 1.8rem;
+                line-height: 1.3;
+            }
+
+            .cover-subtitle {
+                font-size: 1rem;
+                margin-bottom: 2rem;
             }
 
             .section-title {
@@ -925,11 +933,45 @@
 
             .memory-grid {
                 grid-template-columns: repeat(2, 1fr);
-                gap: 1rem;
+                gap: 0.8rem;
             }
 
             .message-text {
                 font-size: 1rem;
+                line-height: 1.6;
+            }
+
+            .btn {
+                padding: 0.9rem 2rem;
+                font-size: 1rem;
+                width: 100%;
+                max-width: 280px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .buttons-row {
+                width: 100%;
+                justify-content: center;
+            }
+
+            .secret-btn {
+                width: 48px;
+                height: 48px;
+                line-height: 48px;
+            }
+
+            .music-btn {
+                top: 15px;
+                right: 15px;
+                width: 44px;
+                height: 44px;
+                font-size: 1.2rem;
+            }
+
+            .valentine-question {
+                font-size: 1.6rem;
             }
         }
 
