--- a/index.html
+++ b/index.html
@@ -652,9 +652,13 @@
         }
 
         .valentine-question {
-            font-size: 2.2rem;
-            margin-bottom: 2.5rem;
+            font-size: 1.8rem;
+            margin-bottom: 2rem;
             font-weight: 700;
+            line-height: 1.3;
+            max-width: 90%;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .valentine-buttons {
@@ -913,7 +917,8 @@
         /* Scroll padding for mobile */
         @media (max-width: 480px) {
             .screen {
-                padding: 1.5rem 1rem;
+                padding: 4rem 1.5rem 2rem;
+                /* Added top padding for music button */
                 min-height: 100dvh;
             }
 
@@ -928,32 +933,35 @@
             }
 
             .section-title {
-                font-size: 1.5rem;
+                font-size: 1.4rem;
             }
 
             .memory-grid {
                 grid-template-columns: repeat(2, 1fr);
                 gap: 0.8rem;
+                padding-top: 1rem;
             }
 
             .message-text {
-                font-size: 1rem;
+                font-size: 0.95rem;
                 line-height: 1.6;
             }
 
             .btn {
-                padding: 0.9rem 2rem;
+                padding: 0.8rem 1.5rem;
                 font-size: 1rem;
                 width: 100%;
                 max-width: 280px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                margin: 0 auto;
             }
 
             .buttons-row {
                 width: 100%;
                 justify-content: center;
+                gap: 0.8rem;
             }
 
             .secret-btn {
@@ -968,10 +976,14 @@
                 width: 44px;
                 height: 44px;
                 font-size: 1.2rem;
+                background: rgba(0, 0, 0, 0.4);
+                /* Darker background for visibility */
+                border: 1px solid rgba(255, 107, 157, 0.5);
+                backdrop-filter: blur(8px);
             }
 
             .valentine-question {
-                font-size: 1.6rem;
+                font-size: 1.5rem;
             }
         }
 
